# dvh-tools

./: .gitignore  README.md  create_connections_sqldeveloper.py  environment_lokal_user.sh  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish_pypi.yml
database/: oracle.py
dvh_tools/: __init__.py  cloud_functions.py  dbt_run_airflow.py  knada_vm_user.py  oracle.py  spenn_secrets.py
dvh_tools/bq_to_oracle/: README.md  bq_reader.py  data_transfer.py  oracle_writer.py
dvh_tools/dbt_tools/: dbt_yaml_generator.py  generate_comments_from_sql.py  generate_comments_utils.py  get_comments_from_oracle.py  set_env_variables.py
secrets/: spenn_secrets.py
