[project]
name = "dvh-tools"
version = "0.12.4"
description = ""
readme = "README.md"
license = "MIT"
authors = [
    { name = "NAV" },
    { name = "DVH" },
]
urls = {repository = "https://github.com/navikt/dvh-tools"}

requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-bigquery>=3.35.1",
    "oracledb>=3.0.0,<4",
    "pandas>=2.3.1",
    "google-cloud-storage>=3.2.0",
    "loguru>=0.7.3",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "pyyaml>=6.0.2",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-downloads = "never"
package = true
exclude-newer = "14 days"

# Due to vulnerabilities, some dependencies need to be overridden to a specific version.
# This also might require excluding those dependencies from the dependency cooldown.
override-dependencies = [
    # CVE-2026-26007
    "cryptography>=46.0.5",
]

[tool.uv.exclude-newer-package]
# CVE-2026-26007
cryptography = "0 days"
